--- a/style.css
+++ b/style.css
@@ -20,3 +20,70 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+body, html {
+    user-select: none;
+    background-color: #008080;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+#start-bar {
+    width: 100%;
+    height: 22px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: #c0c0c0;
+    border-top: 1px solid #fff;
+}
+
+#start-bar-top-border {
+    width: 100%;
+    height: .8px;
+    background-color: #fff;
+    position: fixed;
+    bottom: 20.5px;
+}
+
+#start {
+    font-size: 12px;
+    height: 15px;
+    width: 50px;
+    left: 1px;
+    padding-right: 2px;
+    bottom: 2.3px;
+    position: fixed;
+    text-align: right;
+    background-color:  #c0c0c0;
+    border-top: 1px solid #fff;
+    border-left: 1px solid #fff;
+    border-right: 1px solid #808080;
+    border-bottom: 1px solid #808080;
+    box-shadow:  .8px 1px 0px#000;
+    font-weight: 600;
+}
+
+.bar {
+    height: 15px;
+    position: fixed;
+    bottom: 2px;
+    left: 57px;
+    width: .8px;
+    background-color: #808080;
+    box-shadow:  1px 0px 0px#fff;
+}
+
+#taskbar-notification {
+    position: fixed;
+    right: 1px;
+    background-color: #c0c0c0;
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+    border-top: 1px solid #808080;
+    border-left: 1px solid #808080;
+    width: 100px;
+    height: 20px;
+    bottom: 2px;
+}
