--- a/style.css
+++ b/style.css
@@ -87,3 +87,13 @@ body, html {
     height: 20px;
     bottom: 2px;
 }
+
+#start-menu {
+    display: none;
+    width: 150px;
+    height: 300px;
+    background-color: #c0c0c0;
+    position: fixed;
+    bottom: 25px;
+    left: 2px;
+}
