--- a/style.css
+++ b/style.css
@@ -90,10 +90,31 @@ body, html {
 
 #start-menu {
     display: none;
-    width: 150px;
-    height: 300px;
+    width: 180px;
+    height: 350px;
     background-color: #c0c0c0;
     position: fixed;
     bottom: 25px;
     left: 2px;
+}
+
+#start-menu ul {
+    margin-left: 28px;
+}
+
+#start-menu li {
+    padding: 5px;
+    list-style-type: none;
+    font-size: 13px;
+}
+
+#start-menu-margin {
+    background-color: blue;
+    margin-left: 2px;
+    height: 345px;
+    width: 20px;
+    bottom: 27px;
+    position: fixed;
+    margin-left: 2px solid #fff;
+    margin-top: 1px solid #fff;
 }
