--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body, html {
 
 #start-bar-top-border {
     width: 100%;
-    height: .8px;
+    height: 1px;
     background-color: #fff;
     position: fixed;
     bottom: 20.5px;
@@ -118,3 +118,23 @@ body, html {
     margin-left: 2px solid #fff;
     margin-top: 1px solid #fff;
 }
+
+.icon {
+    padding-left: 5px;
+    height: 100px;
+    width: 80px;
+    bbackground-color: brown;
+    text-align: center;
+    margin-top: 5px;
+}
+
+.icon p {
+    font-size: 15px;
+}
+
+#recycle-bin {
+    position: fixed;
+    right: 15px;
+    bottom: 30px;
+}
+
