--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ body, html {
     position: fixed;
     bottom: 25px;
     left: 2px;
+    z-index: 1000;
 }
 
 #start-menu ul {
@@ -137,4 +138,61 @@ body, html {
     right: 15px;
     bottom: 30px;
 }
+
+.window {
+    top: 0;
+    position: fixed;
+    width: 100%;
+    height: calc(100vh - 22px);
+    background-color: brown;
+}
+
+.window-header {
+    background-color: #000080;
+    width: 100%;
+    height: 25px;
+    border: 1px solid #fff;
+}
+
+.window-menu {
+    width: 100%;
+    height: 22px;
+    border: 1px solid #fff;
+    background-color: #c0c0c0;
+}
+
+.window-menu ul {
+    padding-left: 10px;
+}
+
+.window-menu li {
+    display: inline;
+    padding: 5px;
+    font-weight: 100;
+}
+
+.logo {
+    position: fixed;;
+    right: 2px;
+    top: 27px;
+   
+}
+
+.window-nav {
+    width: 100%;
+    height: 40px;
+    background-color: #c0c0c0;
+    border: 1px solid #fff;
+}
+
+.window-address {
+    width: 100%;
+    height: 22px;
+    background-color: #c0c0c0;
+}
+
+.window-address span {
+    padding-left: 10px;
+}
+
 
