--- a/style.css
+++ b/style.css
@@ -65,6 +65,27 @@ body, html {
     font-weight: 600;
 }
 
+.task {
+    position: fixed;
+    left: 60px;
+    width: 30px;
+    bottom: 0px;
+    height: 18px;
+    background-color:#c0c0c0;
+    border-top: 1px solid #000;
+    border-left: 1px solid #000;
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+}
+
+.task img {
+    width: 28px;
+    height: 25px;
+    position: relative;
+    bottom: 6px;
+    left: 3px;
+}
+
 .bar {
     height: 15px;
     position: fixed;
@@ -90,8 +111,8 @@ body, html {
 
 #start-menu {
     display: none;
-    width: 180px;
-    height: 350px;
+    width: 200px;
+    height: 372px;
     background-color: #c0c0c0;
     position: fixed;
     bottom: 25px;
@@ -110,11 +131,11 @@ body, html {
 }
 
 #start-menu-margin {
-    background-color: blue;
+    background-image: url("https://i.ibb.co/X32BvrT/start-menu-merginleft.png");
     margin-left: 2px;
-    height: 345px;
+    height: 370px;
     width: 20px;
-    bottom: 27px;
+    bottom: 25px;
     position: fixed;
     margin-left: 2px solid #fff;
     margin-top: 1px solid #fff;
@@ -124,7 +145,6 @@ body, html {
     padding-left: 5px;
     height: 100px;
     width: 80px;
-    bbackground-color: brown;
     text-align: center;
     margin-top: 5px;
 }
@@ -144,7 +164,7 @@ body, html {
     position: fixed;
     width: 100%;
     height: calc(100vh - 22px);
-    background-color: brown;
+    background-color: #fff;
 }
 
 .window-header {
@@ -152,6 +172,35 @@ body, html {
     width: 100%;
     height: 25px;
     border: 1px solid #fff;
+    color: #fff;
+    font-weight: 700;
+}
+
+.window-header img {
+    position: fixed;
+    left: 0px;
+    top: -2px;
+    width: 30px;
+    height: 30px;
+}
+
+.window-header-p {
+    position: fixed;
+    left: 30px;
+    top: 6px;
+    font-size: 14px;
+}
+
+.header-close {
+    text-align: center;
+    color: #000;
+    background-color: #c0c0c0;
+    width: 20px;
+    height: 20px;
+    position: fixed;
+    right: 5px;
+    top: 3px;
+    font-size: 16px;
 }
 
 .window-menu {
@@ -185,6 +234,8 @@ body, html {
     border: 1px solid #fff;
 }
 
+
+
 .window-address {
     width: 100%;
     height: 22px;
@@ -203,6 +254,12 @@ body, html {
     position: fixed;
     top: 50px;
     left: 10px;
+}
+
+@media (max-width: 400px) {
+    .window-nav img {
+        width: 300px;
+    }
 }
 
 
