--- a/style.css
+++ b/style.css
@@ -192,6 +192,19 @@ body, html {
     font-size: 14px;
 }
 
+.header-resize {
+    text-align: center;
+    color: #000;
+    background-color: #c0c0c0;
+    width: 20px;
+    height: 20px;
+    position: fixed;
+    right: 34px;
+    top: 3px;
+    font-size: 16px;
+    opacity: .6;
+}
+
 .header-close {
     text-align: center;
     color: #000;
@@ -202,6 +215,22 @@ body, html {
     right: 5px;
     top: 3px;
     font-size: 16px;
+}
+
+.header-minimize {
+    text-align: center;
+    color: #000;
+    background-color: #c0c0c0;
+    width: 20px;
+    height: 20px;
+    position: fixed;
+    right: 56px;
+    top: 3px;
+    font-size: 16px;
+}
+
+.minimize {
+    display: none;
 }
 
 .window-menu {
