--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ body, html {
     position: fixed;
     top: 111px;
     margin-left: 200px;
-    
+
 }
 .icons-comp img {
     padding: 5px;
@@ -321,21 +321,19 @@ body, html {
 }
 
 @media (max-width: 400px) {
-    .window-nav img {
+    .window-content img {
         width: 300px;
     }
+}
 
-    .wind-content {
-        display: flex;
-        flex-direction: column;
-    }
-
+@media (max-width: 320px) {
 
     .icons-comp {
-
-        display: inline-block;
+        position: fixed;
+        margin-top: 120px;
+        margin-left: 10px;
     }
-    
+
 }
 
 
