--- a/style.css
+++ b/style.css
@@ -320,18 +320,18 @@ body, html {
     display: flex;
 }
 
-@media (max-width: 400px) {
-    .window-content img {
-        width: 300px;
-    }
-}
-
 @media (max-width: 320px) {
-
     .icons-comp {
         position: fixed;
         margin-top: 120px;
         margin-left: 10px;
+    }
+
+    .window-menu li {
+        display: inline;
+        padding: 5px;
+        font-weight: 100;
+        font-size: 12px;
     }
 
 }
