--- a/style.css
+++ b/style.css
@@ -67,11 +67,11 @@ body, html {
 }
 
 .task {
-    /* position: fixed;
-    left: 60px; */
+    position: relative;
+    top: 2.5px;
     width: 30px;
     bottom: 0px;
-    height: 18px;
+    height: 17px;
     background-color:#c0c0c0;
     border-top: 1px solid #000;
     border-left: 1px solid #000;
@@ -105,9 +105,13 @@ body, html {
     border-right: 1px solid #fff;
     border-top: 1px solid #808080;
     border-left: 1px solid #808080;
-    width: 100px;
-    height: 20px;
+    width: 45px;
+    height: 16px;
     bottom: 2px;
+    text-align: right;
+    padding-right: 8px;
+    padding-bottom: 1px;
+    font-size: 14px;;
 }
 
 #start-menu {
@@ -118,7 +122,7 @@ body, html {
     position: fixed;
     bottom: 25px;
     left: 2px;
-    z-index: 1000;
+    z-index: 2000;
 }
 
 #start-menu ul {
@@ -320,7 +324,7 @@ body, html {
     display: flex;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 360px) {
     .icons-comp {
         position: fixed;
         margin-top: 120px;
