--- a/style.css
+++ b/style.css
@@ -23,6 +23,23 @@ time, mark, audio, video {
 
 body, html {
     user-select: none;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+#boot {
+    background-image: url("https://i.ibb.co/HrrrSRL/win98boot.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: #000;
+    width: 100%;
+    height: 100%;
+}
+
+#win98 {
+    display: none;
     background-color: #008080;
     width: 100%;
     height: 100%;
@@ -235,6 +252,31 @@ body, html {
     font-size: 16px;
 }
 
+.thumb1 {
+    width: 120px;
+    height: 120px;
+    background-image: url("https://i.ibb.co/NFRB2Xh/wall1.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+.thumb2 {
+    width: 120px;
+    height: 120px;
+    background-image: url("https://i.ibb.co/BtdKqPG/wall2.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+.pictures {
+    position: relative;
+    top: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+   
+}
+
 .minimize {
     display: none;
 }
@@ -242,8 +284,6 @@ body, html {
 .zindex {
     z-index: 1000;
 }
-
-
 
 .window-menu {
     width: 100%;
