--- a/style.css
+++ b/style.css
@@ -32,8 +32,7 @@ body, html {
     background-image: url("https://i.ibb.co/HrrrSRL/win98boot.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
-    background-color: #000;
+    background-size: cover;
     width: 100%;
     height: 100%;
 }
@@ -365,12 +364,20 @@ body, html {
 }
 
 @media (max-width: 360px) {
+    #boot {
+        background-image: url("https://i.ibb.co/1b2WvgM/win98boot-small.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-color: #000;
+        width: 100%;
+        height: 100%;
+    }
     .icons-comp {
         position: fixed;
         margin-top: 120px;
         margin-left: 10px;
     }
-
     .window-menu li {
         display: inline;
         padding: 5px;
