--- a/style.css
+++ b/style.css
@@ -354,22 +354,39 @@ body, html {
     padding: 5px;
 }
 
-.nofloppy {
-    width: 100px;
-    height: 100px;
-    background-color: rebeccapurple;
-}
 
-
-.nocd {
-    width: 200px;
-    height: 120px;
+.winderror {
+    width: 240px;
+    height: 140px;
+    position: relative;
     background-color: #c0c0c0;
     border-left: 2px solid #fff;
     border-top: 1px solid #fff;
-    position: fixed;
-    top: 40%;
-    margin: auto
+    top: 200px;
+    margin: auto;
+}
+
+.winderror-header {
+    background-color: #000080;
+    height: 23px;
+    color: #fff;
+    padding: 1px;
+}
+
+.winderror-close {
+    float: right;
+    color: #000;
+    font-weight: 800;
+    font-size: 13px;
+    padding: 3px;
+    width: 15px;
+    height: 15px;
+    background-color:  #c0c0c0;
+    text-align: center;
+    border-left: 2px solid #fff;
+    border-top: 1px solid #fff;
+    border-right: 2px solid #000;
+    border-bottom: 1px solid #000;
 }
 
 #taskbar-icons {
