--- a/style.css
+++ b/style.css
@@ -354,16 +354,17 @@ body, html {
     padding: 5px;
 }
 
-
 .winderror {
     width: 240px;
     height: 140px;
     position: relative;
     background-color: #c0c0c0;
-    border-left: 2px solid #fff;
-    border-top: 1px solid #fff;
     top: 200px;
     margin: auto;
+    border-left: 2px solid #fff;
+    border-top: 1px solid #fff;
+    border-right: 2px solid #000;
+    border-bottom: 2px solid #000;
 }
 
 .winderror-header {
@@ -387,6 +388,18 @@ body, html {
     border-top: 1px solid #fff;
     border-right: 2px solid #000;
     border-bottom: 1px solid #000;
+}
+
+.winderror-content {
+    background-color: red;
+    height: 70px;
+    margin-top: 8px;
+}
+
+.winderror-buttons {
+    background-color: royalblue;
+    height: 40px;
+    text-align: center;
 }
 
 #taskbar-icons {
