create class winderr

--- a/style.css
+++ b/style.css
@@ -371,7 +371,8 @@ body, html {
     background-color: #000080;
     height: 23px;
     color: #fff;
-    padding: 1px;
+    padding: 2px;
+    padding-left: 5px;
 }
 
 .winderror-close {
@@ -391,15 +392,47 @@ body, html {
 }
 
 .winderror-content {
-    background-color: red;
-    height: 70px;
+    height: 65px;
     margin-top: 8px;
+    display: grid;
+    grid-template-columns: 50px 180px;
+}
+
+.winderror-content img {
+    padding: 5px;
+}
+
+.winderror-mess {
+    font-size: 14px;
+    color: #000;
+    padding: 8px;
+    font-weight: 500;
 }
 
 .winderror-buttons {
-    background-color: royalblue;
-    height: 40px;
+    height: 25px;
+    padding: 8px;
     text-align: center;
+    display: grid;
+    gap: 22px;
+    grid-template-columns: 100px 100px;
+}
+
+.winderror-button {
+    height: 25px;
+    padding: 8px;
+    text-align: center;
+}
+
+.winderror-button input[type="button"] {
+    width: 100px;
+}
+
+.winderror-buttons input[type="button"] {
+    border-left: 2px solid #fff;
+    border-top: 1px solid #fff;
+    border-right: 2px solid #000;
+    border-bottom: 1px solid #000;
 }
 
 #taskbar-icons {
