wind err f and d
chenage input to button- wind err

--- a/style.css
+++ b/style.css
@@ -359,12 +359,12 @@ body, html {
     height: 140px;
     position: relative;
     background-color: #c0c0c0;
-    top: 200px;
+    top: 250px;
     margin: auto;
     border-left: 2px solid #fff;
     border-top: 1px solid #fff;
-    border-right: 2px solid #000;
-    border-bottom: 2px solid #000;
+    border-right: 2.5px solid rgb(32, 30, 30);
+    border-bottom: 2.5px solid rgb(32, 30, 30);
 }
 
 .winderror-header {
@@ -424,11 +424,11 @@ body, html {
     text-align: center;
 }
 
-.winderror-button input[type="button"] {
+.winderror-button button {
     width: 100px;
 }
 
-.winderror-buttons input[type="button"] {
+.winderror-buttons button {
     border-left: 2px solid #fff;
     border-top: 1px solid #fff;
     border-right: 2px solid #000;
