--- a/style.css
+++ b/style.css
@@ -142,13 +142,25 @@ body, html {
 }
 
 #start-menu ul {
-    margin-left: 28px;
+    margin-left: 22px;
 }
 
 #start-menu li {
     padding: 5px;
     list-style-type: none;
     font-size: 13px;
+    display: grid;
+    grid-template-columns: 30px 100px;
+}
+
+#start-menu li p {
+    padding-top: 8px;
+}
+
+
+#start-menu li img {
+    width: 25px;
+    height: auto;
 }
 
 #start-menu-margin {
