fix start menu boot screen

--- a/style.css
+++ b/style.css
@@ -146,10 +146,11 @@ body, html {
 }
 
 #start-menu li {
-    padding: 5px;
+    padding: 3.8px;
     list-style-type: none;
     font-size: 13px;
     display: grid;
+    gap: 5px;
     grid-template-columns: 30px 100px;
 }
 
@@ -159,7 +160,7 @@ body, html {
 
 
 #start-menu li img {
-    width: 25px;
+    width: 26px;
     height: auto;
 }
 
