--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ body, html {
     box-shadow:  1px 0px 0px#fff;
 }
 
+
 #taskbar-notification {
     position: fixed;
     right: 1px;
@@ -339,6 +340,16 @@ body, html {
     width: 100%;
     height: 22px;
     background-color: #c0c0c0;
+    display: flex;
+    padding-left: 12px;
+    padding-top: 3px;
+    font-size: 12px;
+}
+
+.addbar {
+    background-color: #fff;
+    width: 88%;
+    display: flex;
 }
 
 .window-address span {
