--- a/style.css
+++ b/style.css
@@ -328,11 +328,17 @@ body, html {
     position: fixed;
     top: 48px;
     width: 100%;
-    height: 40px;
+    height: 45px;
+    display: inline;
     background-color: #c0c0c0;
     border: 1px solid #fff;
 }
 
+.window-nav img {
+    position: relative;
+    top: 4px;
+    padding-left: 2px;
+}
 
 .window-address {
     position: fixed;
@@ -381,8 +387,8 @@ body, html {
 }
 
 .backg-mycom {
-    position: fixed;
-    top: 115px;
+    position: relative;
+    top: 6px;
     width: 200px;
 }
 
@@ -394,7 +400,7 @@ body, html {
 }
 .icons-comp img {
     padding: 5px;
-}
+}           
 
 
 .winderror {
