--- a/style.css
+++ b/style.css
@@ -315,16 +315,17 @@ body, html {
     display: inline;
     padding: 5px;
     font-weight: 100;
+    font-size: 12px;
 }
 
 .logo {
     position: fixed;;
     right: 2px;
     top: 27px;
-   
 }
 
 .window-nav {
+    overflow-y: auto;
     position: fixed;
     top: 48px;
     width: 100%;
@@ -342,6 +343,7 @@ body, html {
 
 .window-address {
     position: fixed;
+    padding-top: 2px;
     top: 90px;
     width: 100%;
     height: 23px;
