--- a/style.css
+++ b/style.css
@@ -390,13 +390,14 @@ body, html {
 
 .wind-content {
     position: fixed;
-    top: 110px;
-    height: calc(100vh - 133px);
+    top: 119px;
+    width: 100%;
+    height: calc(100vh - 142px);
 }
 
 .backg-mycom {
     position: relative;
-    top: 10px;
+    left: 1px;
     width: 200px;
 }
 
@@ -491,6 +492,57 @@ body, html {
     border-top: 1px solid #fff;
     border-right: 2px solid #000;
     border-bottom: 1px solid #000;
+}
+
+.webpage {
+    width: 60%;
+    margin: auto;
+    height: 100%;
+}
+
+.webpage-header {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+}
+
+.search {
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    background-color: #eeeeee;
+    padding: 5px;
+}
+
+.btns-google {
+    padding: 2px;
+}
+
+.btns-google input[type="button"] {
+    border-left: 1px solid #fff;
+    border-top: 1px solid #fff;
+    border-right: 1px solid #000;
+    border-bottom: 1px solid #000;
+    margin-left: 10px;
+}
+
+.webpage-header img {
+    margin-top: 20px;
+    grid-column: 2;
+    width: 300px;
+    height: auto;
+}
+
+.webpage p:nth-child(3) {
+    position: relative;
+    top: 30px;
+    text-align: center;
+    opacity: .8;
+}
+
+@media (max-width: 400px) {
+    .webpage-header img {
+        width: 200px;
+    }
 }
 
 #taskbar-icons {
