--- a/style.css
+++ b/style.css
@@ -37,6 +37,38 @@ body, html {
     height: 100%;
 }
 
+.bs {
+    background-color: #0000a8;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: #fff;
+    padding-top: 100px;
+    font-size: 14px;
+    z-index: 5000;
+}
+
+ .bs p:first-child {
+    background-color: #a8a8a8;
+    width: 100px;
+    text-align: center;
+    margin: auto;
+    color:  #0000a8 !important;
+    margin-bottom: 30px;
+} 
+
+.bs ul {
+    margin: 20px 40px;
+}
+
+.bs ul li {
+    margin-bottom: 10px;
+}
+
+.bs button {
+    margin-top: 20px;
+} 
+
 #win98 {
     display: none;
     background-color: #008080;
@@ -401,8 +433,8 @@ body, html {
 }
 
 .icons-comp {
-    position: fixed;
-    top: 125px;
+    position: relative;
+    top: -100px;
     margin-left: 200px;
 
 }
@@ -563,7 +595,7 @@ body, html {
         height: 100%;
     }
     .icons-comp {
-        position: fixed;
+        position: relative;
         margin-top: 120px;
         margin-left: 10px;
     }
