--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body, html {
 
 .bs ul li {
     margin-bottom: 10px;
+    list-style-type: none;
 }
 
 .bs button {
@@ -526,7 +527,7 @@ body, html {
 }
 
 .webpage {
-    width: 60%;
+    width: 80%;
     margin: auto;
     height: 100%;
 }
@@ -598,6 +599,15 @@ body, html {
         position: relative;
         margin-top: 120px;
         margin-left: 10px;
+    }
+
+    .btns-google {
+        padding: 2px;
+        display: flex;
+    }
+
+    .btns-google input[type="button"] {
+        width: 150px;
     }
     .window-menu li {
         display: inline;
